# nozzle

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: pages.yml
docs/: COMPLETE.md  SPEC.md  TODO_contur_port.md  VALIDATION.md
docs/algorithms/: axisymmetric_mln.md
docs/references/: README.md
docs/tasks/custom-contour-analysis/: onboarding.md
docs/tasks/delta-plot/: onboarding.md
docs/tasks/dimensional-io/: onboarding.md
examples/configs/: all_types.yaml  anderson_example.yaml  custom_contour.yaml  dimensional.yaml  high_mach.yaml  rao_vs_mln.yaml  sivells_mach4.yaml  tic_comparison.yaml
nozzle/: __init__.py  __main__.py  analysis.py  cli.py  config.py  contours.py  gas.py  kernel.py  moc.py  plots.py  sivells.py
tests/: conftest.py  test_config.py  test_conical.py  test_contur_equivalence.py  test_convergent.py  test_csv_contour.py  test_exit_integral.py  test_gas.py  test_kernel.py  test_length_constrained.py  test_mln.py  test_performance.py  test_plots.py  test_rao.py  test_robustness.py  test_sivells.py  test_sivells_axi.py  test_sivells_contour.py  test_tic.py  test_unit_processes.py
web/: build.py  index.html  serve.py
